--- a/build.gradle
+++ b/build.gradle
@@ -1,4 +1,30 @@
 // Top-level build file where you can add configuration options common to all sub-projects/modules.
+
+buildscript {
+    ext{
+        kotlinVersion = "1.6.10"
+        hiltVersion = '2.41'
+        lifecycleVersion = '2.4.1'
+        coroutinesVersion = "1.6.0"
+        junit = '4.13.2'
+        mockitoCore ='3.3.1'
+        mockitoInline ='2.13.0'
+        testExtJunit = '1.1.3'
+        espressoVersion = '3.4.0'
+        navigationVersion = '2.4.2'
+        hiltNavVersion = "1.0.0"
+        hiltCompilerVersion = "1.0.0-alpha03"
+    }
+    dependencies {
+        classpath "com.android.tools.build:gradle:4.0.2"
+        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
+        // NOTE: Do not place your application dependencies here; they belong
+        // in the individual module build.gradle files
+    }
+}
+
 plugins {
     id 'com.android.application' version '7.1.0' apply false
     id 'com.android.library' version '7.1.0' apply false
