--- a/build.gradle
+++ b/build.gradle
@@ -14,6 +14,8 @@ buildscript {
         navigationVersion = '2.4.2'
         hiltNavVersion = "1.0.0"
         hiltCompilerVersion = "1.0.0-alpha03"
+        paging_version = "3.1.1"
+        glideVersion = '4.11.0'
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.2"
