--- a/build.gradle
+++ b/build.gradle
@@ -16,6 +16,7 @@ buildscript {
         hiltCompilerVersion = "1.0.0-alpha03"
         paging_version = "3.1.1"
         glideVersion = '4.11.0'
+        roomVersion = "2.4.2"
     }
     dependencies {
         classpath "com.android.tools.build:gradle:4.0.2"
