--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -8,10 +8,9 @@ jobs:
     runs-on: ubuntu-latest
 
     steps:
-    
-     - uses: actions/checkout@v4
-      
-     - name: Test command
-       run: echo hello world!
+    - name: set up JDK 11
+      uses: actions/setup-java@v4
+    - name: Test command
+      run: echo hello world!
 
 
