--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -9,6 +9,10 @@ jobs:
     steps:
     - name: set up JDK 11
       uses: actions/setup-java@v4
+      with:
+        distribution : zulu
+        java-version: '17'
+        cache: 'gradle'
     - name: Test command
       run: echo hello world!
 
