--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -10,8 +10,8 @@ jobs:
     - name: set up JDK 11
       uses: actions/setup-java@v4
       with:
-        distribution : zulu
-        java-version: '17'
+        distribution : temurin
+        java-version: '11'
         cache: 'gradle'
     - name: Test command
       run: echo hello world!
