--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -8,11 +8,8 @@ jobs:
 
     steps:
     - name: set up JDK 11
-      uses: actions/setup-java@v4
-      with:
-        distribution : temurin
-        java-version: '11'
-        cache: 'gradle'
+      uses: actions/checkout@v4
+  
     - name: Test command
       run: echo hello world!
 
