--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -3,17 +3,26 @@ name: Android CI
 on:
   workflow_dispatch:
 jobs:
-  job-sample:
+  lint:
+    name: Linting debug variant
     runs-on: ubuntu-latest
 
     steps:
+    - uses: actions/checkout@v4
     - name: set up JDK 11
       uses: actions/setup-java@v4
       with:
-        distribution : temurin
+        distribution: temurin
         java-version: '11'
         cache: 'gradle'
     - name: Test command
       run: echo hello world!
+       - name: Setup Gradle
+          uses: gradle/gradle-build-action@v3
+           - name: chmod
+           run: chmod +x ./gradlew
+            - name: lintDebug
+             run: ./gradlew lintDebug
+
 
 
