--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -10,19 +10,19 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: set up JDK 11
-      uses: actions/setup-java@v4
+    - uses: actions/setup-java@v4
       with:
         distribution: temurin
         java-version: '11'
         cache: 'gradle'
     - name: Test command
       run: echo hello world!
-       - name: Setup Gradle
-          uses: gradle/gradle-build-action@v3
-           - name: chmod
-           run: chmod +x ./gradlew
-            - name: lintDebug
-             run: ./gradlew lintDebug
+    - name: Setup Gradle
+    - uses: gradle/gradle-build-action@v3
+    - name: chmod
+      run: chmod +x ./gradlew
+    - name: lintDebug
+      run: ./gradlew lintDebug
 
 
 
