--- a/.github/workflows/test_ci.yml
+++ b/.github/workflows/test_ci.yml
@@ -10,7 +10,7 @@ jobs:
     steps:
     - uses: actions/checkout@v4
     - name: set up JDK 11
-    - uses: actions/setup-java@v4
+      uses: actions/setup-java@v4
       with:
         distribution: temurin
         java-version: '11'
@@ -18,7 +18,7 @@ jobs:
     - name: Test command
       run: echo hello world!
     - name: Setup Gradle
-    - uses: gradle/gradle-build-action@v3
+      uses: gradle/gradle-build-action@v3
     - name: chmod
       run: chmod +x ./gradlew
     - name: lintDebug
