--- a/build.gradle
+++ b/build.gradle
@@ -2,8 +2,8 @@
 
 buildscript {
     ext{
-        kotlinVersion = "1.6.10"
-        hiltVersion = '2.41'
+        kotlinVersion = "1.8.0"
+        hiltVersion = '2.45'
         lifecycleVersion = '2.4.1'
         coroutinesVersion = "1.6.0"
         junit = '4.13.2'
@@ -11,7 +11,7 @@ buildscript {
         mockitoInline ='2.13.0'
         testExtJunit = '1.1.3'
         espressoVersion = '3.4.0'
-        navigationVersion = '2.4.2'
+        navigationVersion = '2.5.0'
         hiltNavVersion = "1.0.0"
         hiltCompilerVersion = "1.0.0-alpha03"
         paging_version = "3.1.1"
@@ -19,7 +19,7 @@ buildscript {
         roomVersion = "2.4.2"
     }
     dependencies {
-        classpath "com.android.tools.build:gradle:4.0.2"
+        classpath 'com.android.tools.build:gradle:8.0.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlinVersion"
         classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$navigationVersion"
@@ -29,9 +29,9 @@ buildscript {
 }
 
 plugins {
-    id 'com.android.application' version '7.1.0' apply false
-    id 'com.android.library' version '7.1.0' apply false
-    id 'org.jetbrains.kotlin.android' version '1.6.10' apply false
+    id 'com.android.application' version '8.0.2' apply false
+    id 'com.android.library' version '8.0.2' apply false
+    id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 }
 
 task clean(type: Delete) {
