--- a/app/build.gradle
+++ b/app/build.gradle
@@ -22,6 +22,10 @@ android {
     }
     buildFeatures {
         dataBinding true
+        compose = true
+        composeOptions {
+            kotlinCompilerExtensionVersion = "1.4.0"
+        }
     }
     buildTypes {
         release {
@@ -75,10 +79,23 @@ dependencies {
     kapt "com.github.bumptech.glide:compiler:$glideVersion"
     implementation "com.github.bumptech.glide:glide:$glideVersion"
 
+    implementation( "com.github.bumptech.glide:compose:1.0.0-beta01")
+
     implementation("androidx.room:room-runtime:$roomVersion")
     annotationProcessor("androidx.room:room-compiler:$roomVersion")
     kapt("androidx.room:room-compiler:$roomVersion")
     implementation("androidx.room:room-ktx:$roomVersion")
     implementation("androidx.room:room-paging:2.5.0-alpha01")
+
+
+    implementation(platform("androidx.compose:compose-bom:2024.06.00"))
+    // other dependencies
+    // Compose
+    implementation("androidx.activity:activity-compose:1.9.1")
+    implementation("androidx.compose.material3:material3")
+    implementation("com.google.accompanist:accompanist-themeadapter-material3:0.28.0")
+
+
+    debugImplementation("androidx.compose.ui:ui-tooling")
 
 }
